# v8-jsi

./: .clang-format  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CODEOWNERS  GuardianCustomConfiguration.json  LICENSE.v8.md  README.md  ReactNative.V8Jsi.Windows.nuspec  ReactNative.V8Jsi.Windows.targets  V8Jsi.nuspec  azure-pipelines-uwp.yml  azure-pipelines.yml  commands.txt  compile.ps1  config.json  dev.ps1  guardian_baselines.gdnbaselines  localbuild.ps1  nuget.config  packages.config  sync-manifest.json
.ado/: android-build.yml  android-ci.yml  (+11 more)
android/: BUILD.gn  FileUtils.cpp  ReactNative.V8Jsi.Android.nuspec  ReactNative.V8Jsi.Android.targets  ReactNative.V8Jsi.Android.unstripped.nuspec  V8Platform.cpp  V8Platform.h  V8Runtime.h  V8Runtime_droid.cpp  V8Runtime_impl.h  V8Runtime_shared.cpp  build.config  build.sh  localbuild.sh
android/jsi/: decorator.h  jsi.h
android/scripts/: build.patch  build.sh  src.patch
android/scripts/patch/: src_freeze_hostobjects.patch
android/version-script/: makev8jsi.lst
src/: BUILD.gn  IsolateData.h  MurmurHash.cpp  MurmurHash.h  V8Instrumentation.cpp  V8Instrumentation.h  V8JsiRuntime.cpp  V8JsiRuntime_impl.h  V8Platform.cpp  V8Platform.h  V8Windows.h  copy_test_js_files.ts  generate_source_link.ts  generate_version_info.ts  generate_version_rc.ts  jsitests_main.cpp  makev8jsi.lst  source_link.json  testmain.cpp  v8_core.cpp  v8_core.h  v8jsi.cpp  v8jsi.gyp  v8jsi_settings.gypi  v8jsi_test.cc  version.rc  version_info.rc
src/etw/: tracing.cpp  tracing.h  tracing.man
src/inspector/: LICENSE_LLHTTP  inspector_agent.cpp  inspector_agent.h  inspector_socket.cpp  inspector_socket.h  inspector_socket_server.cpp  inspector_socket_server.h  inspector_tcp.cpp  inspector_tcp.h  inspector_utils.cpp  inspector_utils.h  llhttp.c  llhttp.h  llhttp_api.c  llhttp_http.c
src/jsi/: .clang-format  CMakeLists.txt  JSIDynamic.cpp  README.md  decorator.h  instrumentation.h  jsi-inl.h  jsi.cpp  jsi.h
src/jsi/test/: testlib.cpp  testlib_abi.h  testlib_ext.cpp
src/jsi_abi/: JsiAbiRuntime.cpp  JsiAbiRuntime.h  jsi_abi.h  jsi_abi_helpers.h  jsi_abi_v8.cpp  jsi_abi_v8_internal.h  v8_jsi_config.h  v8_node_api_attach.h  v8_snapshot_container.h
src/napi/: Readme.md  env-inl.h  js_native_api_v8.cc  js_native_api_v8.h  js_native_api_v8_internals.h  js_native_ext_api_v8.cpp  util-inl.h  v8_api.cpp
src/napi/test/: napitest.cpp  napitest.h  napitest_v8.cpp  test_2_function_arguments.cpp  test_3_callbacks.cpp  test_4_object_factory.cpp  test_5_function_factory.cpp  test_6_object_wrap.cpp  test_7_factory_wrap.cpp  test_8_passing_wrapped.cpp  test_array.cpp  test_assert.cpp  test_basics.cpp  test_bigint.cpp  test_constructor.cpp  test_conversions.cpp  test_dataview.cpp  test_date.cpp  test_error.cpp  test_exception.cpp  test_ext.cpp  test_function.cpp  test_general.cpp  test_handle_scope.cpp  test_instance_data.cpp  test_new_target.cpp  test_number.cpp  test_object.cpp  test_promise.cpp  test_properties.cpp  test_reference.cpp  test_reference_double_free.cpp  test_string.cpp  test_symbol.cpp  test_typedarray.cpp
src/napi/test/js-native-api/: common.c  common.h
src/napi/test/js-native-api/2_function_arguments/: test.js.h
src/napi/test/js-native-api/3_callbacks/: test.js.h
src/napi/test/js-native-api/4_object_factory/: test.js.h
src/napi/test/js-native-api/5_function_factory/: test.js.h
src/napi/test/js-native-api/6_object_wrap/: test.js  test.js.h
src/napi/test/js-native-api/7_factory_wrap/: test.js.h
src/napi/test/js-native-api/8_passing_wrapped/: test.js  test.js.h
src/napi/test/js-native-api/common/: common.js
src/napi/test/js-native-api/test_array/: test.js.h
src/napi/test/js-native-api/test_bigint/: test.js.h
src/napi/test/js-native-api/test_constructor/: test.js  test.js.h  test2.js.h
src/napi/test/js-native-api/test_conversions/: test.js.h
src/napi/test/js-native-api/test_dataview/: test.js.h
src/napi/test/js-native-api/test_date/: test.js.h
src/napi/test/js-native-api/test_error/: test.js.h
src/napi/test/js-native-api/test_exception/: test.js.h  testFinalizerException.js  testFinalizerException.js.h  test_exception.c
src/napi/test/js-native-api/test_function/: test.js  test.js.h  test_function.c
src/napi/test/js-native-api/test_general/: test.js.h  testEnvCleanup.js.h  testFinalizer.js  testFinalizer.js.h  testGlobals.js.h  testInstanceOf.js.h  testNapiRun.js.h  testNapiStatus.js.h  test_general.c
src/napi/test/js-native-api/test_handle_scope/: test.js.h
src/napi/test/js-native-api/test_instance_data/: test.js.h  test_instance_data.c
src/napi/test/js-native-api/test_new_target/: test.js.h
src/napi/test/js-native-api/test_number/: test.js.h
src/napi/test/js-native-api/test_object/: test.js  test.js.h  test_null.c  test_null.h  test_null.js.h  test_object.c
src/napi/test/js-native-api/test_promise/: test.js.h
src/napi/test/js-native-api/test_properties/: test.js  test.js.h
src/napi/test/js-native-api/test_reference/: test.js  test.js.h  test_reference.c
src/napi/test/js-native-api/test_reference_double_free/: test.js.h  test_reference_double_free.c
src/napi/test/js-native-api/test_string/: test.js  test.js.h
src/napi/test/lib/: assert_js.cpp  common_js.cpp  modules.h
src/node-api/: env-inl.h  js_native_api.h  js_native_api_types.h  js_native_api_v8.cc  js_native_api_v8.h  js_native_api_v8_internals.h  js_native_api_v8_internals_abi.h  js_runtime_api.h  util-inl.h  v8_api.cpp  v8_api_abi.cpp
src/node-api-jsi/: NodeApiJsiRuntime.cpp  NodeApiJsiRuntime.h
src/node-api-jsi/ApiLoaders/: JSRuntimeApi.cpp  JSRuntimeApi.inc  NodeApi.inc  NodeApi_posix.cpp  V8Api.cpp  V8Api.h  V8Api.inc
src/node-api/test/: BUILD.gn  child_process.cpp  child_process.h  node_api_test.cpp  node_api_test.h  node_api_test_v8.cpp  node_api_tests.gyp  testmain.cpp
src/node-api/test/js-native-api/: common.h  node_api.h
src/public/: NapiJsiRuntime.cpp  NapiJsiRuntime.h  Readme.md  ScriptStore.h  V8JsiRuntime.cpp  V8JsiRuntime.h  compat.h  js_native_api_types.h  js_native_ext_api.h  v8_api.h
(+105 files in other folders)
