# Test JS files
copy("node_api_test_js_files") {
  sources = [
    "js-native-api/2_function_arguments/test.js",
    "js-native-api/3_callbacks/test.js",
    "js-native-api/4_object_factory/test.js",
    "js-native-api/5_function_factory/test.js",
    "js-native-api/6_object_wrap/test-object-wrap-ref.js",
    "js-native-api/6_object_wrap/test.js",
    "js-native-api/7_factory_wrap/test.js",
    "js-native-api/8_passing_wrapped/test.js",
    "js-native-api/common/assert.js",
    "js-native-api/common/common.js",
    "js-native-api/test_array/test.js",
    "js-native-api/test_bigint/test.js",
    "js-native-api/test_cannot_run_js/test.js",
    "js-native-api/test_constructor/test.js",
    "js-native-api/test_constructor/test2.js",
    "js-native-api/test_constructor/test_null.js",
    "js-native-api/test_conversions/test.js",
    "js-native-api/test_dataview/test.js",
    "js-native-api/test_date/test.js",
    "js-native-api/test_error/test.js",
    "js-native-api/test_exception/test.js",
    "js-native-api/test_exception/testFinalizerException.js",
    "js-native-api/test_finalizer/test.js",
    "js-native-api/test_finalizer/test_fatal_finalize.js",
    "js-native-api/test_function/test.js",
    "js-native-api/test_general/test.js",
    "js-native-api/test_general/testEnvCleanup.js",
    "js-native-api/test_general/testFinalizer.js",
    "js-native-api/test_general/testGlobals.js",
    "js-native-api/test_general/testInstanceOf.js",
    "js-native-api/test_general/testNapiRun.js",
    "js-native-api/test_general/testNapiStatus.js",
    "js-native-api/test_handle_scope/test.js",
    "js-native-api/test_instance_data/test.js",
    "js-native-api/test_new_target/test.js",
    "js-native-api/test_number/test.js",
    "js-native-api/test_number/test_null.js",
    "js-native-api/test_object/test.js",
    "js-native-api/test_object/test_exceptions.js",
    "js-native-api/test_object/test_null.js",
    "js-native-api/test_promise/test.js",
    "js-native-api/test_properties/test.js",
    "js-native-api/test_reference/test.js",
    "js-native-api/test_reference/test_finalizer.js",
    "js-native-api/test_reference_double_free/test.js",
    "js-native-api/test_reference_double_free/test_wrap.js",
    "js-native-api/test_string/test.js",
    "js-native-api/test_string/test_null.js",
    "js-native-api/test_symbol/test1.js",
    "js-native-api/test_symbol/test2.js",
    "js-native-api/test_symbol/test3.js",
    "js-native-api/test_typedarray/test.js",
  ]
  outputs = [ "$root_out_dir/test-js-files/{{source_target_relative}}" ]
}

config("test_module") {
  include_dirs = [
    "..",
    "js-native-api",
  ]
}

# Test modules
loadable_module("2_function_arguments") {
  configs += [ ":test_module" ]
  deps = [ "//jsi:v8jsi" ]
  sources = [ "js-native-api/2_function_arguments/2_function_arguments.c" ]
}

loadable_module("3_callbacks") {
  configs += [ ":test_module" ]
  deps = [ "//jsi:v8jsi" ]
  sources = [ "js-native-api/3_callbacks/3_callbacks.c" ]
}

loadable_module("4_object_factory") {
  configs += [ ":test_module" ]
  deps = [ "//jsi:v8jsi" ]
  sources = [ "js-native-api/4_object_factory/4_object_factory.c" ]
}

loadable_module("5_function_factory") {
  configs += [ ":test_module" ]
  deps = [ "//jsi:v8jsi" ]
  sources = [ "js-native-api/5_function_factory/5_function_factory.c" ]
}

loadable_module("6_object_wrap") {
  configs += [ ":test_module" ]
  deps = [ "//jsi:v8jsi" ]
  sources = [ "js-native-api/6_object_wrap/6_object_wrap.cc" ]
}

loadable_module("7_factory_wrap") {
  configs += [ ":test_module" ]
  deps = [ "//jsi:v8jsi" ]
  sources = [
    "js-native-api/7_factory_wrap/7_factory_wrap.cc",
    "js-native-api/7_factory_wrap/myobject.cc",
  ]
}

loadable_module("8_passing_wrapped") {
  configs += [ ":test_module" ]
  deps = [ "//jsi:v8jsi" ]
  sources = [
    "js-native-api/8_passing_wrapped/8_passing_wrapped.cc",
    "js-native-api/8_passing_wrapped/myobject.cc",
  ]
}

loadable_module("test_array") {
  configs += [ ":test_module" ]
  deps = [ "//jsi:v8jsi" ]
  sources = [ "js-native-api/test_array/test_array.c" ]
}

loadable_module("test_bigint") {
  configs += [ ":test_module" ]
  deps = [ "//jsi:v8jsi" ]
  sources = [ "js-native-api/test_bigint/test_bigint.c" ]
}

loadable_module("test_cannot_run_js") {
  configs += [ ":test_module" ]
  deps = [ "//jsi:v8jsi" ]
  defines = [ "NAPI_EXPERIMENTAL" ]
  sources = [ "js-native-api/test_cannot_run_js/test_cannot_run_js.c" ]
}

loadable_module("test_pending_exception") {
  configs += [ ":test_module" ]
  deps = [ "//jsi:v8jsi" ]
  defines = [ "NAPI_VERSION=8" ]
  sources = [ "js-native-api/test_cannot_run_js/test_cannot_run_js.c" ]
}

loadable_module("test_constructor") {
  configs += [ ":test_module" ]
  deps = [ "//jsi:v8jsi" ]
  sources = [
    "js-native-api/test_constructor/test_constructor.c",
    "js-native-api/test_constructor/test_null.c",
  ]
}

loadable_module("test_conversions") {
  configs += [ ":test_module" ]
  deps = [ "//jsi:v8jsi" ]
  sources = [
    "js-native-api/test_conversions/test_conversions.c",
    "js-native-api/test_conversions/test_null.c",
  ]
}

loadable_module("test_dataview") {
  configs += [ ":test_module" ]
  deps = [ "//jsi:v8jsi" ]
  sources = [ "js-native-api/test_dataview/test_dataview.c" ]
}

loadable_module("test_date") {
  configs += [ ":test_module" ]
  deps = [ "//jsi:v8jsi" ]
  sources = [ "js-native-api/test_date/test_date.c" ]
}

loadable_module("test_error") {
  configs += [ ":test_module" ]
  deps = [ "//jsi:v8jsi" ]
  sources = [ "js-native-api/test_error/test_error.c" ]
}

loadable_module("test_exception") {
  configs += [ ":test_module" ]
  deps = [ "//jsi:v8jsi" ]
  sources = [ "js-native-api/test_exception/test_exception.c" ]
}

loadable_module("test_finalizer") {
  configs += [ ":test_module" ]
  deps = [ "//jsi:v8jsi" ]
  defines = [ "NAPI_EXPERIMENTAL" ]
  sources = [ "js-native-api/test_finalizer/test_finalizer.c" ]
}

loadable_module("test_function") {
  configs += [ ":test_module" ]
  deps = [ "//jsi:v8jsi" ]
  sources = [ "js-native-api/test_function/test_function.c" ]
}

loadable_module("test_general") {
  configs += [ ":test_module" ]
  deps = [ "//jsi:v8jsi" ]
  sources = [ "js-native-api/test_general/test_general.c" ]
}

loadable_module("test_handle_scope") {
  configs += [ ":test_module" ]
  deps = [ "//jsi:v8jsi" ]
  sources = [ "js-native-api/test_handle_scope/test_handle_scope.c" ]
}

loadable_module("test_instance_data") {
  configs += [ ":test_module" ]
  deps = [ "//jsi:v8jsi" ]
  sources = [ "js-native-api/test_instance_data/test_instance_data.c" ]
}

loadable_module("test_new_target") {
  configs += [ ":test_module" ]
  deps = [ "//jsi:v8jsi" ]
  sources = [ "js-native-api/test_new_target/test_new_target.c" ]
}

loadable_module("test_number") {
  configs += [ ":test_module" ]
  deps = [ "//jsi:v8jsi" ]
  sources = [
    "js-native-api/test_number/test_null.c",
    "js-native-api/test_number/test_number.c",
  ]
}

loadable_module("test_object") {
  configs += [ ":test_module" ]
  deps = [ "//jsi:v8jsi" ]
  sources = [
    "js-native-api/test_object/test_null.c",
    "js-native-api/test_object/test_object.c",
  ]
}

loadable_module("test_exceptions") {
  configs += [ ":test_module" ]
  deps = [ "//jsi:v8jsi" ]
  sources = [ "js-native-api/test_object/test_exceptions.c" ]
}

loadable_module("test_promise") {
  configs += [ ":test_module" ]
  deps = [ "//jsi:v8jsi" ]
  sources = [ "js-native-api/test_promise/test_promise.c" ]
}

loadable_module("test_properties") {
  configs += [ ":test_module" ]
  deps = [ "//jsi:v8jsi" ]
  sources = [ "js-native-api/test_properties/test_properties.c" ]
}

loadable_module("test_reference") {
  configs += [ ":test_module" ]
  deps = [ "//jsi:v8jsi" ]
  sources = [ "js-native-api/test_reference/test_reference.c" ]
}

loadable_module("test_ref_finalizer") {
  configs += [ ":test_module" ]
  deps = [ "//jsi:v8jsi" ]
  sources = [ "js-native-api/test_reference/test_finalizer.c" ]
}

loadable_module("test_reference_double_free") {
  configs += [ ":test_module" ]
  deps = [ "//jsi:v8jsi" ]
  sources = [
    "js-native-api/test_reference_double_free/test_reference_double_free.c",
  ]
}

loadable_module("test_string") {
  configs += [ ":test_module" ]
  deps = [ "//jsi:v8jsi" ]
  defines = [ "NAPI_EXPERIMENTAL" ]
  sources = [
    "js-native-api/test_string/test_null.c",
    "js-native-api/test_string/test_string.c",
  ]
}

loadable_module("test_symbol") {
  configs += [ ":test_module" ]
  deps = [ "//jsi:v8jsi" ]
  sources = [ "js-native-api/test_symbol/test_symbol.c" ]
}

loadable_module("test_typedarray") {
  configs += [ ":test_module" ]
  deps = [ "//jsi:v8jsi" ]
  sources = [ "js-native-api/test_typedarray/test_typedarray.c" ]
}

executable("node_lite") {
  testonly = true

  deps = [
    "//build/win:default_exe_manifest",
    "//jsi:v8jsi",
    "//testing/gtest",
  ]

  configs += [
    "//:toolchain",
    "//:internal_config_base",
    "//build/config/compiler:exceptions",
    "//build/config/compiler:rtti",
  ]
  configs -= [
    "//build/config/compiler:no_exceptions",
    "//build/config/compiler:no_rtti",
  ]

  include_dirs = [
    "..",
    "../../public",
  ]

  sources = [
    "../../public/compat.h",
    "../../public/v8_api.h",
    "../js_native_api.h",
    "../js_native_api_types.h",
    "../js_runtime_api.h",
    "child_process.cpp",
    "child_process.h",
    "node_api_test.cpp",
    "node_api_test.h",
    "node_api_test_v8.cpp",
  ]
}

executable("node_api_tests") {
  testonly = true

  deps = [
    ":node_lite",
    "//build/win:default_exe_manifest",
    "//testing/gtest",
  ]

  # Test JS files
  deps += [ ":node_api_test_js_files" ]

  # Test modules
  deps += [
    ":2_function_arguments",
    ":3_callbacks",
    ":4_object_factory",
    ":5_function_factory",
    ":6_object_wrap",
    ":7_factory_wrap",
    ":8_passing_wrapped",
    ":test_array",
    ":test_bigint",
    ":test_cannot_run_js",
    ":test_constructor",
    ":test_conversions",
    ":test_dataview",
    ":test_date",
    ":test_error",
    ":test_exception",
    ":test_exceptions",
    ":test_finalizer",
    ":test_function",
    ":test_general",
    ":test_handle_scope",
    ":test_instance_data",
    ":test_new_target",
    ":test_number",
    ":test_object",
    ":test_pending_exception",
    ":test_promise",
    ":test_properties",
    ":test_ref_finalizer",
    ":test_reference",
    ":test_reference_double_free",
    ":test_string",
    ":test_symbol",
    ":test_typedarray",
  ]

  configs += [
    "//:toolchain",
    "//:internal_config_base",
    "//build/config/compiler:exceptions",
    "//build/config/compiler:rtti",
  ]
  configs -= [
    "//build/config/compiler:no_exceptions",
    "//build/config/compiler:no_rtti",
  ]

  sources = [
    "child_process.cpp",
    "child_process.h",
    "testmain.cpp",
  ]
}
